# sourcekit-lsp

./: .editorconfig  .flake8  .gitignore  .license_header_template  .licenseignore  .swift-format  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Package.resolved  Package.swift  README.md  config.schema.json  overrides.xcconfig  sourcekit-lsp-dev-utils  sourcekit-lsp.code-workspace
Sources/: CMakeLists.txt  CompletionScoringForPlugin  SKLoggingForPlugin  SKUtilitiesForPlugin  SourceKitDForPlugin  SwiftExtensionsForPlugin
Sources/BuildServerIntegration/: BuildServerHooks.swift  BuildServerManager.swift  BuildServerManagerDelegate.swift  BuildServerMessageDependencyTracker.swift  BuildSettingsLogger.swift  BuildTargetIdentifierExtensions.swift  BuiltInBuildServer.swift  BuiltInBuildServerAdapter.swift  CMakeLists.txt  CompilationDatabase.swift  CompilerCommandLineOption.swift  DetermineBuildServer.swift  ExternalBuildServerAdapter.swift  FallbackBuildSettings.swift  FileBuildSettings.swift  FixedCompilationDatabaseBuildServer.swift  JSONCompilationDatabaseBuildServer.swift  LegacyBuildServer.swift  MainFilesProvider.swift  PackageGraph+Reachability.swift  SplitShellCommand.swift  SwiftPMBuildServer.swift  SwiftToolchainResolver.swift  SwiftlyResolver.swift
Sources/BuildServerProtocol/: BuildTargetSourcesRequest.swift  BuildTargets.swift  BuildTargetsRequest.swift  CMakeLists.txt  DidChangeBuildTargetNotification.swift  DidChangeWatchedFilesNotification.swift  FileOptions.swift  FlagRequest.swift  FlagResponse.swift  InitializeBuild.swift  InverseSourcesRequest.swift  LogMessageNotification.swift  Messages.swift  PrepareTargetsRequest.swift  RefreshDocumentsNotification.swift  RegisterForChangeNotifications.swift  ShutdownBuild.swift  SourceKitOptionsRequest.swift  WaitForBuildSystemUpdates.swift
Sources/BuildSystemIntegration/: BuildServerBuildSystem.swift  BuildSettingsLogger.swift  BuildSystem.swift  BuildSystemDelegate.swift  BuildSystemHooks.swift  BuildSystemManager.swift  BuildSystemManagerDelegate.swift  BuildSystemMessageDependencyTracker.swift  BuildSystemTestHooks.swift  BuildTargetIdentifierExtensions.swift  BuiltInBuildSystem.swift  BuiltInBuildSystemAdapter.swift  CMakeLists.txt  CompilationDatabase.swift  CompilationDatabaseBuildSystem.swift  DetermineBuildSystem.swift  ExternalBuildSystemAdapter.swift  FallbackBuildSettings.swift  FallbackBuildSystem.swift  FileBuildSettings.swift  FixedCompilationDatabaseBuildSystem.swift  IndexTaskID.swift  JSONCompilationDatabaseBuildSystem.swift  Language+InferredFromFileExtension.swift  LegacyBuildServerBuildSystem.swift  MainFilesProvider.swift  PathPrefixMapping.swift  PrefixMessageWithTaskEmoji.swift  QueueBasedMessageHandler.swift  SplitShellCommand.swift  SwiftPMBuildSystem.swift  SwiftlyResolver.swift  TestBuildSystem.swift
Sources/CAtomics/: CAtomics.c  CMakeLists.txt
Sources/CCompletionScoring/: CCompletionScoring.c  CMakeLists.txt
Sources/CSKTestSupport/: CSKTestSupport.c
Sources/ClangLanguageService/: CMakeLists.txt  ClangLanguageService.swift  SemanticTokenTranslator.swift
Sources/CompletionScoring/: CMakeLists.txt
Sources/CompletionScoringTestSupport/: CommonFunctionTerms.json  RandomSeed.plist  RepeatableRandomNumberGenerator.swift  SymbolGenerator.swift  TestExtensions.swift  Timings.swift  WeightedChoices.swift
Sources/Csourcekitd/: CMakeLists.txt  sourcekitd.c
Sources/Diagnose/: ActiveRequestsCommand.swift  CMakeLists.txt  CommandConfiguration+Sendable.swift  CommandLineArgumentsReducer.swift  DebugCommand.swift  DiagnoseCommand.swift  FileReducer.swift  FixItApplier.swift  GenericError.swift  IndexCommand.swift  MergeSwiftFiles.swift  OSLogScraper.swift  ReduceCommand.swift  ReduceFrontendCommand.swift  ReduceSourceKitDRequest.swift  ReduceSwiftFrontend.swift  ReductionError.swift  ReproducerBundle.swift  RequestInfo.swift  RunSourcekitdRequestCommand.swift  SourceKitD+RunWithYaml.swift  SourceKitDRequestExecutor.swift  SourceReducer.swift  SourcekitdRequestCommand.swift  StderrStreamConcurrencySafe.swift  SwiftFrontendCrashScraper.swift  Toolchain+PluginPaths.swift  Toolchain+SwiftFrontend.swift  TraceFromSignpostsCommand.swift
Sources/DocCDocumentation/: BuildSystemIntegrationExtensions.swift  CMakeLists.txt  DocCCatalogIndexManager.swift  DocCDocumentationManager.swift  DocCDocumentationManagerImpl.swift  DocCReferenceResolutionService.swift  DocCServer.swift  DocCSymbolInformation.swift  DocCSymbolLink.swift  DoccDocumentationError.swift  EmptySymbolGraph.swift  IndexStoreDB+Extensions.swift
Sources/DocumentationLanguageService/: BuildSystemIntegrationExtensions.swift  DocCCatalogIndexManager.swift  DocCDocumentationManager.swift  DocCReferenceResolutionService.swift  DocCServer.swift  DocCSymbolInformation.swift  DocCSymbolLink.swift  DoccDocumentationError.swift  DoccDocumentationHandler.swift  DocumentationLanguageService.swift  EmptySymbolGraph.swift  IndexStoreDB+Extensions.swift
Sources/InProcessClient/: CMakeLists.txt  InProcessSourceKitLSPClient.swift  LanguageServiceRegistry+staticallyKnownServices.swift  LocalConnection.swift
Sources/LSPHelpers/: LogLevel.swift
Sources/LSPLogging/: CMakeLists.txt  CustomLogStringConvertible.swift  Error+ForLogging.swift  LogLevel.swift  Logging.swift  LoggingScope.swift  NonDarwinLogging.swift  OrLog.swift  SetGlobalLogFileHandler.swift  SplitLogMessage.swift
Sources/LSPSupport/: Int.swift  Logging.swift
Sources/LSPTestSupport/: AssertNoThrow.swift  Assertions.swift  CheckCoding.swift  LocalConnection.swift  PerfTestCase.swift  String+TrimTrailingWhitespace.swift  TestJSONRPCConnection.swift  Timeouts.swift
Sources/LanguageServerProtocol/: ApplyEdit.swift  AsyncQueue.swift  CMakeLists.txt  CancelRequest.swift  ClientCapabilities.swift  CodeAction.swift  CodeActionKind.swift  ColorPresentationRequest.swift  Command.swift  Completion.swift  CompletionItem.swift  CompletionItemKind.swift  Configuration.swift  Connection.swift  CustomCodable.swift  DefinitionRequest.swift  Diagnostic.swift  DocumentColor.swift  (+52 more)
(+1196 files in other folders)
