add_subdirectory(BuildServerProtocol)
add_subdirectory(Csourcekitd)
add_subdirectory(LanguageServerProtocol)
add_subdirectory(LanguageServerProtocolJSONRPC)
add_subdirectory(LSPLogging)
add_subdirectory(SKCore)
add_subdirectory(SKSupport)
add_subdirectory(SKSwiftPMWorkspace)
add_subdirectory(SourceKitLSP)
add_subdirectory(SourceKitD)
add_subdirectory(sourcekit-lsp)
