add_library(LanguageServerProtocol STATIC
  Cancellation.swift
  Connection.swift
  CustomCodable.swift
  Error.swift
  Message.swift
  MessageRegistry.swift
  Messages.swift
  PositionRange.swift
  Request.swift
  RequestID.swift

  Notifications/CancelRequestNotification.swift
  Notifications/ConfigurationNotification.swift
  Notifications/DidChangeWatchedFilesNotification.swift
  Notifications/DidChangeWorkspaceFoldersNotification.swift
  Notifications/ExitNotification.swift
  Notifications/InitializedNotification.swift
  Notifications/LogMessageNotification.swift
  Notifications/PublishDiagnosticsNotification.swift
  Notifications/ShowMessageNotification.swift
  Notifications/TextSynchronizationNotifications.swift

  Requests/ApplyEditRequest.swift
  Requests/CallHierarchyIncomingCallsRequest.swift
  Requests/CallHierarchyOutgoingCallsRequest.swift
  Requests/CallHierarchyPrepareRequest.swift
  Requests/CodeActionRequest.swift
  Requests/ColorPresentationRequest.swift
  Requests/CompletionRequest.swift
  Requests/DefinitionRequest.swift
  Requests/DocumentColorRequest.swift
  Requests/DocumentHighlightRequest.swift
  Requests/DocumentSemanticTokensDeltaRequest.swift
  Requests/DocumentSemanticTokensRangeRequest.swift
  Requests/DocumentSemanticTokensRequest.swift
  Requests/DocumentSymbolRequest.swift
  Requests/ExecuteCommandRequest.swift
  Requests/FoldingRangeRequest.swift
  Requests/FormattingRequests.swift
  Requests/HoverRequest.swift
  Requests/ImplementationRequest.swift
  Requests/InitializeRequest.swift
  Requests/InlayHintRequest.swift
  Requests/PollIndexRequest.swift
  Requests/PrepareRenameRequest.swift
  Requests/ReferencesRequest.swift
  Requests/RegisterCapabilityRequest.swift
  Requests/RenameRequest.swift
  Requests/ShowMessageRequest.swift
  Requests/ShutdownRequest.swift
  Requests/SymbolInfoRequest.swift
  Requests/TypeDefinitionRequest.swift
  Requests/TypeHierarchyPrepareRequest.swift
  Requests/TypeHierarchySupertypesRequest.swift
  Requests/TypeHierarchySubtypesRequest.swift
  Requests/UnregisterCapabilityRequest.swift
  Requests/WorkspaceFoldersRequest.swift
  Requests/WorkspaceSemanticTokensRefreshRequest.swift
  Requests/WorkspaceSymbolsRequest.swift

  SupportTypes/CallHierarchyItem.swift
  SupportTypes/ClientCapabilities.swift
  SupportTypes/CodeActionKind.swift
  SupportTypes/Command.swift
  SupportTypes/CompletionItem.swift
  SupportTypes/CompletionItemKind.swift
  SupportTypes/Diagnostic.swift
  SupportTypes/DocumentURI.swift
  SupportTypes/FileEvent.swift
  SupportTypes/FileSystemWatcher.swift
  SupportTypes/FoldingRangeKind.swift
  SupportTypes/InlayHint.swift
  SupportTypes/Language.swift
  SupportTypes/Location.swift
  SupportTypes/LocationLink.swift
  SupportTypes/LocationsOrLocationLinksResponse.swift
  SupportTypes/LSPAny.swift
  SupportTypes/MarkupContent.swift
  SupportTypes/Position.swift
  SupportTypes/RegistrationOptions.swift
  SupportTypes/SemanticTokens.swift
  SupportTypes/ServerCapabilities.swift
  SupportTypes/SKCompletionOptions.swift
  SupportTypes/SymbolKind.swift
  SupportTypes/TextDocumentContentChangeEvent.swift
  SupportTypes/TextDocumentEdit.swift
  SupportTypes/TextDocumentIdentifier.swift
  SupportTypes/TextDocumentItem.swift
  SupportTypes/TextDocumentSaveReason.swift
  SupportTypes/TextEdit.swift
  SupportTypes/TypeHierarchyItem.swift
  SupportTypes/VersionedTextDocumentIdentifier.swift
  SupportTypes/WindowMessageType.swift
  SupportTypes/WorkspaceEdit.swift
  SupportTypes/WorkspaceFolder.swift
  SupportTypes/WorkspaceSettings.swift)
set_target_properties(LanguageServerProtocol PROPERTIES
  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
target_link_libraries(LanguageServerProtocol PUBLIC
  $<$<NOT:$<PLATFORM_ID:Darwin>>:swiftDispatch>
  $<$<NOT:$<PLATFORM_ID:Darwin>>:Foundation>)
