add_library(LanguageServerProtocol STATIC
  Connection.swift
  CustomCodable.swift
  Error.swift
  Message.swift
  MessageRegistry.swift
  Messages.swift
  PositionRange.swift
  RequestID.swift

  Notifications/CancelRequestNotification.swift
  Notifications/CancelWorkDoneProgressNotification.swift
  Notifications/ConfigurationNotification.swift
  Notifications/DidChangeActiveDocumentNotification.swift
  Notifications/DidChangeFileNotifications.swift
  Notifications/DidChangeWatchedFilesNotification.swift
  Notifications/DidChangeWorkspaceFoldersNotification.swift
  Notifications/ExitNotification.swift
  Notifications/InitializedNotification.swift
  Notifications/LogMessageNotification.swift
  Notifications/LogTraceNotification.swift
  Notifications/PublishDiagnosticsNotification.swift
  Notifications/ReopenTextDocumentNotifications.swift
  Notifications/SetTraceNotification.swift
  Notifications/ShowMessageNotification.swift
  Notifications/TextSynchronizationNotifications.swift
  Notifications/WorkDoneProgress.swift

  Requests/ApplyEditRequest.swift
  Requests/CallHierarchyIncomingCallsRequest.swift
  Requests/CallHierarchyOutgoingCallsRequest.swift
  Requests/CallHierarchyPrepareRequest.swift
  Requests/CodeActionRequest.swift
  Requests/CodeActionResolveRequest.swift
  Requests/CodeLensRefreshRequest.swift
  Requests/CodeLensRequest.swift
  Requests/CodeLensResolveRequest.swift
  Requests/ColorPresentationRequest.swift
  Requests/CompletionItemResolveRequest.swift
  Requests/CompletionRequest.swift
  Requests/CreateWorkDoneProgressRequest.swift
  Requests/DeclarationRequest.swift
  Requests/DefinitionRequest.swift
  Requests/DiagnosticsRefreshRequest.swift
  Requests/DoccDocumentationRequest.swift
  Requests/DocumentColorRequest.swift
  Requests/DocumentDiagnosticsRequest.swift
  Requests/DocumentHighlightRequest.swift
  Requests/DocumentLinkRequest.swift
  Requests/DocumentLinkResolveRequest.swift
  Requests/DocumentPlaygroundsRequest.swift
  Requests/DocumentSemanticTokensDeltaRequest.swift
  Requests/DocumentSemanticTokensRangeRequest.swift
  Requests/DocumentSemanticTokensRequest.swift
  Requests/DocumentSymbolRequest.swift
  Requests/DocumentTestsRequest.swift
  Requests/ExecuteCommandRequest.swift
  Requests/FoldingRangeRequest.swift
  Requests/FormattingRequests.swift
  Requests/GetReferenceDocumentRequest.swift
  Requests/HoverRequest.swift
  Requests/ImplementationRequest.swift
  Requests/IndexedRenameRequest.swift
  Requests/InitializeRequest.swift
  Requests/InlayHintRefreshRequest.swift
  Requests/InlayHintRequest.swift
  Requests/InlayHintResolveRequest.swift
  Requests/InlineValueRefreshRequest.swift
  Requests/InlineValueRequest.swift
  Requests/IsIndexingRequest.swift
  Requests/LinkedEditingRangeRequest.swift
  Requests/MonikersRequest.swift
  Requests/OutputPathsRequest.swift
  Requests/PeekDocumentsRequest.swift
  Requests/PrepareRenameRequest.swift
  Requests/ReferencesRequest.swift
  Requests/RegisterCapabilityRequest.swift
  Requests/RenameRequest.swift
  Requests/SelectionRangeRequest.swift
  Requests/SetOptionsRequest.swift
  Requests/ShowDocumentRequest.swift
  Requests/ShowMessageRequest.swift
  Requests/ShutdownRequest.swift
  Requests/SignatureHelpRequest.swift
  Requests/SourceKitOptionsRequest.swift
  Requests/SymbolInfoRequest.swift
  Requests/SynchronizeRequest.swift
  Requests/TriggerReindexRequest.swift
  Requests/TypeDefinitionRequest.swift
  Requests/TypeHierarchyPrepareRequest.swift
  Requests/TypeHierarchySubtypesRequest.swift
  Requests/TypeHierarchySupertypesRequest.swift
  Requests/UnregisterCapabilityRequest.swift
  Requests/WillChangeFilesRequests.swift
  Requests/WillSaveWaitUntilTextDocumentRequest.swift
  Requests/WorkspaceDiagnosticsRequest.swift
  Requests/WorkspaceFoldersRequest.swift
  Requests/WorkspaceSemanticTokensRefreshRequest.swift
  Requests/WorkspaceSymbolResolveRequest.swift
  Requests/WorkspaceSymbolsRequest.swift
  Requests/WorkspaceTestsRequest.swift

  SupportTypes/CallHierarchyItem.swift
  SupportTypes/ClientCapabilities.swift
  SupportTypes/CodeActionKind.swift
  SupportTypes/Command.swift
  SupportTypes/CompletionItem.swift
  SupportTypes/CompletionItemKind.swift
  SupportTypes/Diagnostic.swift
  SupportTypes/DocumentURI.swift
  SupportTypes/FileEvent.swift
  SupportTypes/FileSystemWatcher.swift
  SupportTypes/FoldingRangeKind.swift
  SupportTypes/InlayHint.swift
  SupportTypes/InsertReplaceEdit.swift
  SupportTypes/Language.swift
  SupportTypes/Location.swift
  SupportTypes/LocationLink.swift
  SupportTypes/LocationsOrLocationLinksResponse.swift
  SupportTypes/LSPAny.swift
  SupportTypes/MarkupContent.swift
  SupportTypes/NotebookCellTextDocumentFilter.swift
  SupportTypes/NotebookDocument.swift
  SupportTypes/NotebookDocumentChangeEvent.swift
  SupportTypes/NotebookDocumentIdentifier.swift
  SupportTypes/PlaygroundItem.swift
  SupportTypes/Position.swift
  SupportTypes/PositionEncoding.swift
  SupportTypes/ProgressToken.swift
  SupportTypes/RegistrationOptions.swift
  SupportTypes/SemanticTokenModifiers.swift
  SupportTypes/SemanticTokens.swift
  SupportTypes/SemanticTokenTypes.swift
  SupportTypes/ServerCapabilities.swift
  SupportTypes/StringOrMarkupContent.swift
  SupportTypes/SupportedCodeLensCommand.swift
  SupportTypes/SymbolKind.swift
  SupportTypes/TestItem.swift
  SupportTypes/TextDocumentContentChangeEvent.swift
  SupportTypes/TextDocumentEdit.swift
  SupportTypes/TextDocumentIdentifier.swift
  SupportTypes/TextDocumentItem.swift
  SupportTypes/TextDocumentSaveReason.swift
  SupportTypes/TextEdit.swift
  SupportTypes/Tracing.swift
  SupportTypes/TypeHierarchyItem.swift
  SupportTypes/VersionedNotebookDocumentIdentifier.swift
  SupportTypes/VersionedTextDocumentIdentifier.swift
  SupportTypes/WindowMessageType.swift
  SupportTypes/WorkspaceEdit.swift
  SupportTypes/WorkspaceFolder.swift
  SupportTypes/WorkspaceSettings.swift)
set_target_properties(LanguageServerProtocol PROPERTIES
  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
target_link_libraries(LanguageServerProtocol PUBLIC
  $<$<NOT:$<PLATFORM_ID:Darwin>>:swiftDispatch>
  $<$<NOT:$<PLATFORM_ID:Darwin>>:Foundation>)
